improved call dispatcher