@@ -15,25 +15,26 @@ public class CallDispatcher
 		try
 		{
 			Class clazz = Class.forName(ClassName);
-			Object instance = clazz.newInstance();
+			// Former Code: Object instance = clazz.newInstance();
+			Object instance = clazz.getDeclaredConstructor().newInstance();
+			PublicCallable classPublicCallable = instance.getClass().getAnnotation(PublicCallable.class);
+			if(classPublicCallable == null) throw new InstantiationException("No allowed method found!"); //return null;
 			Vector<Class> classVec = new Vector<Class>();
 			for(Object arg: args) classVec.add(arg.getClass());
 			for(Method m: clazz.getMethods())
 			{
 				if(!(m.getName().equals(MethodName))) continue;
 				PublicCallable publicCallable = m.getAnnotation(PublicCallable.class);
-				// Security barrier wich allows only @publicCallable annotated methods to be public called
+				// Security barrier wich allows only @PublicCallable annotated methods to be public called
 				if(publicCallable == null) throw new NoSuchMethodException("No allowed method found!"); //return null;
-				if(Arrays.equals(m.getParameterTypes(), classVec.toArray()))
-				{
-					return m.invoke(instance, args);
-				}
+				if(Arrays.equals(m.getParameterTypes(), classVec.toArray())) return m.invoke(instance, args);
 			}
 			throw new NoSuchMethodException("No suitable method found!");
 		}
 		catch(ClassNotFoundException | InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException ex)
 		{
 			System.err.println("Exception! " + ex.getMessage());
+			ex.printStackTrace();
 		}
 		return null;
 	}
